--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Inria+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Neon Game Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
